testdata/baselines/reference/submodule/compiler/undefinedInferentialTyping.errors.txt
undefinedInferentialTyping.ts(2,5): error TS2322: Type 'null' is not assignable to type 'T'.


==== undefinedInferentialTyping.ts (1 errors) ====
    function f<T>(arr: T[], elemnt: T): T {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
    }
    
    var a = f([], 3); // should be number